--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "files": [
         "package.json",
         "README.md",
-        "dist/"
+        "dist/",
+        "typings"
     ],
     "sideEffects": false,
     "author": {
