--- a/package.json
+++ b/package.json
@@ -3,25 +3,8 @@
     "version": "1.1.0",
     "description": "统计rollup 打包文件的 总计、原始尺寸、gzipped 体积",
     "keywords": [
-        "rollup-plugin",
-        "typescript"
+        "rollup-plugin"
     ],
-    "main": "dist/index.cjs.js",
-    "module": "dist/index.es.js",
-    "typings": "typings/index.d.ts",
-    "exports": {
-        ".": {
-            "import": "./dist/index.es.js",
-            "require": "./dist/index.cjs.js"
-        }
-    },
-    "files": [
-        "package.json",
-        "README.md",
-        "dist/",
-        "typings"
-    ],
-    "sideEffects": false,
     "author": {
         "name": "halo951",
         "url": "https://github.com/halo951"
@@ -35,9 +18,30 @@
     },
     "homepage": "https://github.com/halo951/rollup-plugin-total-size#readme",
     "license": "MIT",
+    "sideEffects": false,
+    "files": [
+        "src",
+        "dist"
+    ],
+    "main": "dist/index.js",
+    "module": "dist/index.mjs",
+    "typings": "dist/typings/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/typings/index.d.ts",
+            "require": "./dist/index.js",
+            "import": "./dist/index.mjs"
+        }
+    },
+    "engines": {
+        "node": ">=16"
+    },
     "scripts": {
         "clean": "rimraf dist/* && rimraf typings/*",
         "build": "rollup --config ./rollup.config.ts --configPlugin typescript2"
+    },
+    "peerDependencies": {
+        "rollup": "*"
     },
     "dependencies": {
         "boxen": "5",
