--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,24 @@
 {
-    "include": ["lib/**/*.ts", "__tests__/*.ts"],
-    "exclude": [],
     "compilerOptions": {
-        "lib": ["esnext", "DOM"],
-        "types": ["node"],
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "jsx": "preserve",
-        "paths": {
-            "@/*": ["./lib"]
-        },
-        "sourceMap": false,
-        "noEmit": true,
-        "noEmitHelpers": true,
-        "removeComments": false,
-        "importHelpers": true,
-        "resolveJsonModule": true,
-
-        "strict": true,
-        "noUnusedLocals": true,
-        "strictNullChecks": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "noImplicitReturns": false,
-        "allowSyntheticDefaultImports": true,
-        "noEmitOnError": true,
-        "skipDefaultLibCheck": true,
-        "skipLibCheck": true,
-
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "esModuleInterop": true,
+        "strict": false,
+        "target": "ES6",
+        "module": "esnext",
+        "types": [
+            "node"
+        ],
+        "lib": [
+            "ESNext",
+            "dom"
+        ],
+        "outDir": "dist",
         "declaration": true,
-        "declarationDir": "typings"
-    }
+        "declarationDir": "dist/typings",
+        "moduleResolution": "nodenext",
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true,
+        "importHelpers": true
+    },
+    "include": [
+        "src/**/*.ts"
+    ]
 }
