--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     },
     "dependencies": {
         "boxen": "5",
-        "brotli-wasm": "^1.3.0",
+        "brotli": "^1.3.3",
         "chalk": "4",
         "prettier": "^2.7.1"
     },
     "devDependencies": {
+        "@types/brotli": "^1.3.1",
         "@types/glob": "^8.0.0",
         "@types/prettier": "^2.7.0",
         "rimraf": "^3.0.2",
